--- a/modules/ROOT/partials/plugin-files/plugin-file-list-a11ychecker.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-a11ychecker.adoc
@@ -4,14 +4,9 @@
 ./plugins/a11ychecker/plugin.js
 ----
 
-.css
+.css or bundled css
 [source, js]
 ----
-./plugins/a11ychecker/css/annotations.css
-----
-
-.js
-[source, js]
-----
+./plugins/a11ychecker/css/annotations.css // or
 ./plugins/a11ychecker/css/annotations.js // bundling requires v6.8.0 or later.
 ----
