--- a/modules/ROOT/partials/plugin-files/plugin-file-list-export.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-export.adoc
@@ -2,5 +2,10 @@
 [source, js]
 ----
 ./plugins/export/plugin.js
+----
+
+.other js files
+[source, js]
+----
 ./plugins/export/exporters/clientpdf.js
 ----
