--- a/modules/ROOT/partials/plugin-files/plugin-file-list-mentions.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-mentions.adoc
@@ -4,14 +4,9 @@
 ./plugins/mentions/plugin.js
 ----
 
-.css
+.css or bundled css
 [source, js]
 ----
-./plugins/mentions/css/mentions.css
-----
-
-.js
-[source, js]
-----
+./plugins/mentions/css/mentions.css //or
 ./plugins/mentions/css/mentions.js // bundling requires v6.8.0 or later.
 ----
