--- a/modules/ROOT/partials/plugin-files/plugin-file-list-advcode.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-advcode.adoc
@@ -4,16 +4,16 @@
 ./plugins/advcode/plugin.js
 ----
 
-.css
+.css or bundled css
 [source, js]
 ----
-./plugins/advcode/codemirror.min.css
-./plugins/advcode/codemirror.min.js
-./plugins/advcode/customeditor.js
+./plugins/advcode/codemirror.min.css //or
+./plugins/advcode/codemirror_css.js // bundling requires v6.8.0 or later.
 ----
 
-.js
+.other js files
 [source, js]
 ----
-./plugins/advcode/codemirror_css.js // bundling requires v6.8.0 or later.
+./plugins/advcode/codemirror.min.js
+./plugins/advcode/customeditor.js
 ----
