--- a/modules/ROOT/partials/plugin-files/plugin-file-list-mediaembed.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-mediaembed.adoc
@@ -4,14 +4,9 @@
 ./plugins/mediaembed/plugin.js
 ----
 
-.css
+.css or bundled css
 [source, js]
 ----
-./plugins/mediaembed/content.min.css
-----
-
-.js
-[source, js]
-----
+./plugins/mediaembed/content.min.css //or
 ./plugins/mediaembed/content_css.js // bundling requires v6.8.0 or later.
 ----
