--- a/modules/ROOT/partials/plugin-files/plugin-file-list-powerpaste.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-powerpaste.adoc
@@ -1,6 +1,11 @@
 .Base js file
 [source, js]
 ----
-./plugins/powerpaste/js/wordimport.js
 ./plugins/powerpaste/plugin.js
+----
+
+.other js files
+[source, js]
+----
+./plugins/powerpaste/js/wordimport.js
 ----
