--- a/modules/ROOT/pages/bundling-plugins.adoc
+++ b/modules/ROOT/pages/bundling-plugins.adoc
@@ -37,8 +37,8 @@ import 'tinymce/plugins/example';
 a|
 [source, js]
 ----
-import pluginCss from '../tinymce/plugins/example/content.js';
-//import pluginCss from '../tinymce/plugins/example/content_css.js';
+import '../tinymce/plugins/example/content.js';
+//import '../tinymce/plugins/example/content_css.js';
 import '../tinymce/plugins/example/plugin';
 ----
 
