DOC-2228: update admon-building-plugin-langs.adoc to include links.

--- a/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
@@ -328,5 +328,7 @@ include::partial$plugin-files/plugin-file-list-visualchars.adoc[]
 include::partial$plugin-files/plugin-file-list-wordcount.adoc[]
 
 
-[[bundling-plugin-language-files]]
+[[plugin-language-files]]
+== Plugin language files
+
 include::partial$module-loading/bundling-plugin-language-files.adoc[]
