--- a/modules/ROOT/partials/module-loading/bundling-plugin-language-files.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-plugin-language-files.adoc
@@ -1,6 +1,4 @@
-== Plugin language files
-
-IMPORTANT: Replace `<plugin-name>` with the specific plugin name when adding the language files to your config.
+IMPORTANT: Replace `<plugin-name>` with the specific plugin name when adding the plugin language files to your config.
 
 [source, js]
 ----
