--- a/modules/ROOT/partials/plugin-files/plugin-file-list-pageembed.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-pageembed.adoc
@@ -1,4 +1,12 @@
-....
-./plugins/pageembed/css/empa30.css
+.Base js file
+[source, js]
+----
 ./plugins/pageembed/plugin.js
-....
+----
+
+.css or bundled css
+[source, js]
+----
+./plugins/pageembed/css/empa30.css //or
+./plugins/pageembed/css/empa30.js  // bundling requires v6.8.0 or later.
+----
