--- a/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
@@ -326,3 +326,9 @@ include::partial$plugin-files/plugin-file-list-visualchars.adoc[]
 === Word Count (`+wordcount+`)
 
 include::partial$plugin-files/plugin-file-list-wordcount.adoc[]
+
+
+[[plugin-language-files]]
+== Plugin language files
+
+include::partial$module-loading/bundling-plugin-language-files.adoc[]
