DOC-2181: TinyMCE 6.8.1 release notes. (#2956)
* DOC-2181: TinyMCE 6.8 release notes.

* DOC-2181: add changelog entry for 6.8.

* DOC-2181: add fix documentation to TINY-10154 to the 6.8 release notes. (#2957)

* DOC-2181: add fix documentation for TINY-10133 to the 6.8 release notes. (#2958)

* DOC-2181: add fix documentation for TINY-10133 to the 6.8 release notes.

* Update modules/ROOT/pages/6.8-release-notes.adoc

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

---------

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

* DOC-2181: add fix documentation for TINY-10254 to the 6.8 release notes. (#2978)

* DOC-2181: add fix documentation for TINY-10088 to the 6.8 release notes. (#2963)

* DOC-2181: add fix documentation for TINY-10088 to the 6.8 release notes.

* add ref link

* DOC-2181: add addition `new feature` documentation for TINY-9974 in the 6.8 release notes. (#2959)

* DOC-2181: add addition  documentation for TINY-9974 in the 6.8 release notes.

* Update modules/ROOT/pages/6.8-release-notes.adoc

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

---------

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

* DOC-2181: add improvement documentation for TINY-9963 to the release notes. (#2967)

* DOC-2181: fix documentation for TINY-10209 in the 6.8 release notes. (#2961)

* DOC-2181: add fix documentation for TINY-10162 to the 6.8 release notes. (#2968)

* DOC-2181: add change documentation for TINY-10237 to the 6.8 release notes. (#2970)

* DOC-2181: add fix documentation for TINY-10289 in the 6.8 release notes. (#2971)

* DOC-2181: add fix documentation for TINY-10289 in the 6.8 release notes.

* Update modules/ROOT/pages/6.8-release-notes.adoc

* Update modules/ROOT/pages/6.8-release-notes.adoc

* Update modules/ROOT/pages/6.8-release-notes.adoc

* Update modules/ROOT/pages/6.8-release-notes.adoc

* DOC-2181: fix documentation for TINY-10153 to the 6.8 release

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -405,6 +405,13 @@
 ** xref:tinymce-and-cors.adoc[Cross-Origin Resource Sharing (CORS)]
 * Release information
 ** xref:release-notes.adoc[Release notes for TinyMCE 6]
+*** TinyMCE 6.8.1
+**** xref:6.8.1-release-notes.adoc#overview[Overview]
+**** xref:6.8.1-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+**** xref:6.8.1-release-notes.adoc#accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
+**** xref:6.8.1-release-notes.adoc#improvements[Improvements]
+**** xref:6.8.1-release-notes.adoc#additions[Additions]
+**** xref:6.8.1-release-notes.adoc#bug-fixes[Bug fixes]
 *** TinyMCE 6.7.3
 **** xref:6.7.3-release-notes.adoc#overview[Overview]
 **** xref:6.7.3-release-notes.adoc#security-fix[Security fix]
