--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -529,6 +529,5 @@
 **** xref:6.0-release-notes-premium-changes.adoc[Premium changes]
 **** xref:6.0-release-notes-known-issues.adoc[Known issues]
 ** xref:changelog.adoc[Changelog]
-* xref:faq[FAQ]
-** xref:invalid-api-key.adoc[Invalid API key]
+* xref:invalid-api-key.adoc[Invalid API key]
 * xref:support.adoc[Support]
