--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -7,9 +7,11 @@ NOTE: This is the {productname} Community version changelog. For information abo
 == 6.8.2 - 2023-12-07
 
 === Fixed
+* Bespoke select toolbar buttons including `fontfamily`, `fontsize`, `blocks`, and `styles` incorrectly used plural words in their accessible names.
+* The `align` bespoke select toolbar button had an accessible name that was misleading and grammatically incorrect in certain cases.
+* Accessible names of bespoke select toolbar buttons including `align`,`fontfamily`, `fontsize`, `blocks`, and `styles` were incorrectly translated.
 * Clicking inside table cells with heavily nested content could cause the browser to hang.
 * Toggling a list that contains an LI element having another list as its first child would remove the remaining content within that LI element.
-* Bespoke dropdown toolbar buttons including `fontfamily`, `fontsize`, `blocks`, and `styles` incorrectly used plural words in their accessible names.
 
 == 6.8.1 - 2023-11-29
 
