--- a/modules/ROOT/pages/6.7.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.7.3-release-notes.adoc
@@ -23,9 +23,9 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 A https://researchgate.net/publication/266654651_mXSS_attacks_Attacking_well-secured_web-applications_by_using_innerHTML_mutations[mutation cross-site scripting] (mXSS) vulnerability was discovered in {productname}’s core undo/redo functionality and other APIs and plugins. Text nodes within specific parents are not escaped upon serialization according to the https://html.spec.whatwg.org/multipage/parsing.html#serialising-html-fragments[HTML standard]. If such text nodes contain a special character reserved as an internal marker, they can be combined with other HTML patterns to form malicious snippets. These snippets pass the initial sanitization layer when the content is parsed into the editor body, but can trigger XSS when the special internal marker is removed from the content and re-parsed. Such mutations occur when serialized HTML content is processed before being stored in the undo stack, or when the following APIs and plugins are used:
 
-* https://tiny.cloud/docs/tinymce/6/apis/tinymce.editor/#getContent[tinymce.Editor.getContent({ format: 'raw' })]
-* https://tiny.cloud/docs/tinymce/6/apis/tinymce.editor/#resetContent[tinymce.Editor.resetContent()]
-* https://tiny.cloud/docs/tinymce/6/autosave/[Autosave Plugin]
+* xref:apis/tinymce.editor.adoc#getContent[tinymce.Editor.getContent({ format: 'raw' })]
+* xref:apis/tinymce.editor.adoc#resetContent[tinymce.Editor.resetContent()]
+* xref:autosave.adoc[Autosave Plugin]
 
 This vulnerability has been patched in {productname} 6.7.3 by:
 
