--- a/modules/ROOT/pages/6.8.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.8.2-release-notes.adoc
@@ -28,9 +28,9 @@ The {productname} 6.8.2 release includes an accompanying release of the **PowerP
 
 ==== `white-space-collapse` CSS property was not correctly supported when pasting from Google Docs.
 // #TINY-9967
+From major version 114, Google Chrome and Microsoft Edge added support for the CSS4 shorthand `white-space` property. The shorthand `white-space` property would be expanded into the `white-space-collapse` and `text-wrap` properties. This resulted in PowerPaste not being able to remove the `white-space-collapse` and `text-wrap` properties from the emitted content even after `white-space: pre` is removed. This issue was particularly noticeable when copying content from Google Docs.
 
-// CCFR here.
-
+As of {productname} 6.8.2, PowerPaste now supports working with the shorthand `white-space` property by removing the expanded `white-space-collapse` and `text-wrap` properties when present from Google Docs content.
 
 For information on the **PowerPaste** plugin, see: xref:introduction-to-powerpaste.adoc[PowerPaste].
 
@@ -57,10 +57,27 @@ For information on the **PowerPaste** plugin, see: xref:introduction-to-powerpas
 
 === Clicking inside table cells with heavily nested content could cause the browser to hang.
 // #TINY-10380
+Previously when clicking below content that is heavily nested inside a block such as a table cell, would cause the browser to hang.
 
-// CCFR here.
+{productname} 6.8.2 addresses this, by optimizing the code responsible for the hang while updating the algorithm.
+
+As a result, the browser no longer hangs, when clicking inside table cells with heavily nested content.
 
 === Toggling a list that contains an LI element having another list as its first child would remove the remaining content within that LI element.
 // #TINY-10414
+In a previous xref:6.7.2-release-notes.adoc#toggling-a-list-that-contained-a-list-item-element-li-which-in-turn-contained-another-list-item-element-as-its-first-child-removed-other-content-within-the-first-list-item-element[fix] _(toggling-a-list-that-contained-a-list-item-element-li-which-in-turn-contained-another-list-item-element-as-its-first-child-removed-other-content-within-the-first-list-item-element)_ for lists, some element structures would not recreate the `<li>` tags when a list element was toggled using the `bullist` button in the toolbar.
 
-// CCFR here.
+.Example structure 
+[source, html]
+----
+<li>
+  <ul>...</ul>
+  <something-else/>
+</li>
+----
+
+As a consequence, any tags nested within the `li` would be deleted from the {productname} document, resulting in content loss for the user.
+
+{productname} 6.8.2 addresses this by improving the representation of the list to manage this case.
+
+As a result, now, when toggling `<li>` elements using the `bullist` button, content within a list is now correctly recreated the content is retained as expected.
