DOC-2225: add fix documentation for TINY-10426, TINY-10435 and TINY-10435. including removal of duplicate 6.7.2 entry in changelog.adoc.

--- a/modules/ROOT/pages/6.8.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.8.2-release-notes.adoc
@@ -1,6 +1,6 @@
-= TinyMCE 6.8.2
-:navtitle: TinyMCE 6.8.2
-:description: Release notes for TinyMCE 6.8.2
+= {productname} 6.8.2
+:navtitle: {productname} 6.8.2
+:description: Release notes for {productname} 6.8.2
 :keywords: releasenotes, new, changes, bugfixes
 :page-toclevels: 1
 
@@ -43,17 +43,23 @@ For information on the **PowerPaste** plugin, see: xref:introduction-to-powerpas
 === Bespoke select toolbar buttons including `fontfamily`, `fontsize`, `blocks`, and `styles` incorrectly used plural words in their accessible names.
 // #TINY-10426
 
-// CCFR here.
+As of {productname} 6.8.1, the accessible labels of bespoke select toolbar buttons announced both the name of the button and the current value of the visible selected option. However, some bespoke button names, including `fontfamily`, `fontsize`, `blocks`, and `styles` have plural names, such as “Fonts”. This resulted in incorrect grammar when combined with the current value, an example being "Fonts Arial".
+
+As of {productname} 6.8.2, the accessible labels of `fontfamily`, `fontsize`, `blocks`, and `styles` bespoke buttons use singular words for the names. This results in grammatically correct labels such as “Font Arial”.
 
 === The `align` bespoke select toolbar button had an accessible name that was misleading and grammatically incorrect in certain cases.
 // #TINY-10435
 
-// CCFR here.
+As of {productname} 6.8.1, the accessible label of the `align` bespoke select toolbar button announced both the name of the button, “Align”, and the currently selected value. This would result in the accessible label of the select button to be “Align left”, “Align right”, “Align center”, or “Align justify” depending on the value selected. However, the problem with the first three labels is that they are the same as the normal align toolbar buttons. This is misleading as unlike the normal align buttons, the bespoke button does not result in the aligning action, and instead opens a dropdown. The problem with “Align justify” is that the two verbs do not make grammatical sense in terms of describing the text alignment.
+
+As of {productname} 6.8.2, the name of the `align` bespoke select button is changed to “Alignment”, followed by the currently selected value. This results in the accessible labels being “Alignment left”, “Alignment right”, “Alignment center”, or “Alignment justify” depending on the values selected, which more clearly indicates the currently selected text alignment.
 
 === Accessible names of bespoke select toolbar buttons including `align`, `fontfamily`, `fontsize`, `blocks`, and `styles` were incorrectly translated.
 // #TINY-10426 #TINY-10435
 
-// CCFR here.
+As of {productname} 6.8.1, the accessible label of the `align` bespoke select toolbar button announced both the name of the button and the currently selected value, for example “Block Paragraph”. However, corresponding translation strings with placeholders were not added. This resulted in the current value being translated as expected, but not the name of the button. 
+
+In {productname} 6.8.2, new translation strings were added to ensure names of the bespoke select toolbar buttons are translated as well, making their accessible labels appropriately translated.
 
 === Clicking inside table cells with heavily nested content could cause the browser to hang.
 // #TINY-10380
