--- a/modules/ROOT/pages/6.8.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.8.2-release-notes.adoc
@@ -38,7 +38,7 @@ For information on the **PowerPaste** plugin, see: xref:introduction-to-powerpas
 [[bug-fixes]]
 == Bug fixes
 
-{productname} 6.8.2 also includes the following bug fix<es>:
+{productname} 6.8.2 also includes the following bug fixes:
 
 === Bespoke select toolbar buttons including `fontfamily`, `fontsize`, `blocks`, and `styles` incorrectly used plural words in their accessible names.
 // #TINY-10426
