--- a/modules/ROOT/partials/configuration/language_load.adoc
+++ b/modules/ROOT/partials/configuration/language_load.adoc
@@ -1,7 +1,7 @@
 [[language_load]]
 == `+language_load+`
 
-This option determines whether additional plugin or theme languages are loaded during {productname} editor initialization when bundling. The default behavior for plugins that support multiple languages is to automatically load the additional language packs, unless specified otherwise in the configuration.
+This option determines whether additional plugin or theme languages are loaded during {productname} editor initialization. By default, plugins which have support for languages other than English will automatically load the additional language packs.
 
 *Type:* `+boolean+`
 
