DOC-2234: Add playbooks

--- a/modules/ROOT/pages/advanced/available-menu-items.adoc
+++ b/modules/ROOT/pages/advanced/available-menu-items.adoc
@@ -74,7 +74,7 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
 :plugincategory: premium
 :pluginname: Comments
-:plugincode: comments
+:plugincode: tinycomments
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
 :plugincategory: opensource
