--- a/modules/ROOT/pages/plugins/premium/comments/comments_commands_events_apis.adoc
+++ b/modules/ROOT/pages/plugins/premium/comments/comments_commands_events_apis.adoc
@@ -10,4 +10,4 @@
 
 The Comments plugin provides the following JavaScript commands.
 
-include::partial$commands/comments-cmds.adoc[]
+include::partial$commands/tinycomments-cmds.adoc[]
