--- a/modules/ROOT/pages/plugins/premium/comments/comments_toolbars_menus.adoc
+++ b/modules/ROOT/pages/plugins/premium/comments/comments_toolbars_menus.adoc
@@ -4,7 +4,7 @@
 :title_nav: Toolbar buttons and menu items
 
 :pluginname: Comments
-:plugincode: comments
+:plugincode: tinycomments
 
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
