--- a/modules/ROOT/pages/enterprise/server/configure.adoc
+++ b/modules/ROOT/pages/enterprise/server/configure.adoc
@@ -487,14 +487,14 @@ To write the logs to a specific file:
 
   <appender name="STDOUT" class="ch.qos.logback.core.ConsoleAppender">
     <encoder>
-      <pattern>%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n</pattern>
+      <pattern>%d{HH:mm:ss.SSS} [%thread] %-5level %logger\{36\} - %msg%n</pattern>
     </encoder>
   </appender>
 
   <appender name="FILE" class="ch.qos.logback.core.FileAppender">
     <file>{$LOG_LOCATION}</file>
     <encoder>
-      <pattern>%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n</pattern>
+      <pattern>%d{HH:mm:ss.SSS} [%thread] %-5level %logger\{36\} - %msg%n</pattern>
     </encoder>
   </appender>
 
