DOC-2234: Testing changed build

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -146,7 +146,7 @@
 ** xref:enterprise/tiny-comments.adoc[Commenting & collaboration]
 ** xref:enterprise/tinydrive.adoc[Cloud-based file management]
 ** xref:enterprise/moxiemanager.adoc[Self-hosted file management]
-** xref:enterprise/premium-skins-and-icon-packs.adoc[Tiny Skins and Icon Packs]
+** xref:enterprise/premium-skins-and-icon-packs/index.adoc[Tiny Skins and Icon Packs]
 *** xref:enterprise/premium-skins-and-icon-packs/bootstrap-demo.adoc[Bootstrap Demo]
 *** xref:enterprise/premium-skins-and-icon-packs/material-classic-demo.adoc[Material Classic Demo]
 *** xref:enterprise/premium-skins-and-icon-packs/material-outline-demo.adoc[Material Outline Demo]
@@ -163,16 +163,16 @@
 ** xref:enterprise/formatpainter.adoc[Format Painter]
 ** xref:enterprise/checklist.adoc[Checklist]
 ** xref:enterprise/paste-from-word.adoc[Paste from Word]
-** xref:enterprise/check-spelling.adoc[Spell checking as-you-type]
+** xref:enterprise/check-spelling/index.adoc[Spell checking as-you-type]
 *** xref:enterprise/check-spelling/custom.adoc[Adding custom dictionaries]
 ** xref:enterprise/casechange.adoc[Case Change]
 ** xref:enterprise/check-links.adoc[Hyperlink checking]
-** xref:enterprise/embed-media.adoc[Media embedding]
+** xref:enterprise/embed-media/index.adoc[Media embedding]
 *** xref:enterprise/embed-media/mediaembed-server-config.adoc[Configure Enhanced Media Embed Server]
 *** xref:enterprise/embed-media/mediaembed-server-integration.adoc[Integrate Enhanced Media Embed Server]
 ** xref:enterprise/accessibility.adoc[Accessibility checking]
 ** xref:enterprise/mentions.adoc[Mentions]
-** xref:enterprise/server.adoc[Server-side component installation]
+** xref:enterprise/server/index.adoc[Server-side component installation]
 *** xref:enterprise/server/configure.adoc[Configure server-side components]
 *** xref:enterprise/server/self-hosting-hunspell.adoc[Using Hunspell dictionaries]
 *** xref:enterprise/server/dockerservices.adoc[Containerized service deployments]
