DOC-2201: Added link to  to direct users to the AI Assistant demo.

--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -21,10 +21,10 @@ Once a response is generated and displayed within the dialog, the user can choos
 
 Users can retrieve a history of their conversations with the AI using the xref:#getThreadLog[`getThreadLog` API], including any discarded responses.
 
-[IMPORTANT]
-.On the absence of an {pluginname} demo
+[NOTE]
+.{pluginname} demo
 ====
-This initial release of the {pluginname} developer documentation does not include an in-page working demo.
+For marketing purposes, {productname} will _only_ be providing a demo for **AI Assistant** on our main website. Checkout https://www.tiny.cloud/tinymce/features/ai-integration/[tiny.cloud/tinymce/features/ai-integration].
 ====
 
 == Basic setup
