--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -24,7 +24,7 @@ Users can retrieve a history of their conversations with the AI using the xref:#
 [NOTE]
 .{pluginname} demo
 ====
-For marketing purposes, {productname} will _only_ be providing a demo for **AI Assistant** on our main website. Checkout https://www.tiny.cloud/tinymce/features/ai-integration/[tiny.cloud/tinymce/features/ai-integration].
+Demos containing the {pluginname} plugin are currently only available on our main website. Check out https://www.tiny.cloud/tinymce/features/ai-integration/[the {pluginname} demo], or the https://www.tiny.cloud/[demo on our home page], to try it out today.
 ====
 
 == Basic setup
