DOC-2201: Added link to `ai.adoc` to direct users to the AI Assistant demo. (#3044)
* DOC-2178: add fix to  for  when inserting template.

* DOC-2201: Added link to  to direct users to the AI Assistant demo.

* Update modules/ROOT/pages/ai.adoc

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

---------

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -21,10 +21,10 @@ Once a response is generated and displayed within the dialog, the user can choos
 
 Users can retrieve a history of their conversations with the AI using the xref:#getThreadLog[`getThreadLog` API], including any discarded responses.
 
-[IMPORTANT]
-.On the absence of an {pluginname} demo
+[NOTE]
+.{pluginname} demo
 ====
-This initial release of the {pluginname} developer documentation does not include an in-page working demo.
+Demos containing the {pluginname} plugin are currently only available on our main website. Check out https://www.tiny.cloud/tinymce/features/ai-integration/[the {pluginname} demo], or the https://www.tiny.cloud/[demo on our home page], to try it out today.
 ====
 
 == Basic setup
