DOC-1925: Add Skins and Icons examples to examples.adoc index page

--- a/modules/ROOT/pages/examples.adoc
+++ b/modules/ROOT/pages/examples.adoc
@@ -11,3 +11,8 @@ include::partial$index-pages/general-examples.adoc[]
 == Integration examples
 
 include::partial$index-pages/integration-examples.adoc[]
+
+[[skins-and-icons-examples]]
+== Skins and Icons examples
+
+include::partial$index-pages/skins-and-icons-examples.adoc[]
