Apply suggestions from code review
Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

--- a/modules/ROOT/partials/index-pages/skins-and-icons-examples.adoc
+++ b/modules/ROOT/partials/index-pages/skins-and-icons-examples.adoc
@@ -7,13 +7,13 @@ a|
 [.lead]
 xref:bootstrap-demo.adoc[Bootstrap Demo]
 
-Example form with colors, forms, and buttons matching Bootstrap framework UI.
+Example form with colors, forms, and buttons to closely match the default Bootstrap framework UI.
 
 a|
 [.lead]
 xref:borderless-demo.adoc[Borderless Demo]
 
-Default TinyMCE skin without outer border, ideal for "fullscreen" editing.
+Default TinyMCE skin without an outer border, ideal for "fullscreen" editing.
 
 a|
 [.lead]
