DOC-1925: Add Skins and Icons examples to examples.adoc index page (#3046)
* DOC-1925: Add Skins and Icons examples to examples.adoc index page

* Fixed nav.adoc link and added entry to changelog

* Update changelog.md

* Apply suggestions from code review

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

---------

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -225,7 +225,7 @@
 *** xref:distraction-free-demo.adoc[Distraction-free editor]
 ** xref:examples.adoc#integration-examples[Integration examples]
 *** xref:ie-template-creation.adoc[Template creation example]
-** Tiny Skins and Icon Packs
+** xref:examples.adoc#skins-and-icons-examples[Skins and Icons examples]
 *** xref:bootstrap-demo.adoc[Bootstrap Demo]
 *** xref:borderless-demo.adoc[Borderless Demo]
 *** xref:fabric-demo.adoc[Fabric Demo]
